--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section id="buttons">
+		<button onclick="applause()" class="btn">applause</button>
+		<button onclick="boo()" class="btn">boo</button>
+		<button onclick="gasp()" class="btn">gasp</button>
+		<button onclick="tada()" class="btn">tada</button>
+		<button onclick="victory" class="btn">victoy</button>
+		<button onclick="wrong" class="btn">wrong</button>
+		<button onclick="stop" class="stop">stop</button>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
