--- a/main.html
+++ b/main.html
@@ -4,19 +4,18 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+		
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 	<section id="buttons">
-		<button onclick="applause()" class="btn">applause</button>
-		<button onclick="boo()" class="btn">boo</button>
-		<button onclick="gasp()" class="btn">gasp</button>
-		<button onclick="tada()" class="btn">tada</button>
-		<button onclick="victory" class="btn">victoy</button>
-		<button onclick="wrong" class="btn">wrong</button>
-		<button onclick="stop" class="stop">stop</button>
-	</section>
+	<button class="btn"><audio src="sounds/applause.mp3"></audio>applause</button>
+	<button class="btn"><audio src="sounds/boo.mp3"></audio>boo</button>
+	<button class="btn"><audio src="sounds/gasp.mp3"></audio>gasp</button>
+	<button class="btn"><audio src="sounds/tada.mp3"></audio>tada</button>
+	<button class="btn"><audio src="sounds/victory.mp3"></audio>victory</button>
+	<button class="btn"><audio src="sounds/wrong.mp3"></audio>wrong</button>
+	<button class="stop">stop</button>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
